--- a/index.html
+++ b/index.html
@@ -2662,11 +2662,11 @@
                     <div
                         class="social_media_container flex items-center w-full justify-center md:hidden relative gap-[.35rem]">
 
-                        <a href="https://x.com/" target="_blank"
+                        <a href="https://x.com/cryptotrump_fun" target="_blank"
                             class="social relative  flex cursor-pointer h-[55px] w-[55px] rounded-full border-[3px] border-black items-center justify-center bg-[#7CFFA1]">
                             <img src="x-icon.svg" alt="twitter" class="relative h-auto w-[60%]">
                         </a>
-                        <a href="https://t.me/" target="_blank"
+                        <a href="https://t.me/cryptotrump_fun" target="_blank"
                             class="social relative  flex cursor-pointer h-[55px] w-[55px] rounded-full border-[3px] border-black items-center justify-center bg-[#7CE7FF]">
                             <img src="tele-icon.svg" alt="telegram" class="relative h-auto w-[60%]">
                         </a>
@@ -2764,11 +2764,11 @@
 
                 <div class="social_media_container flex items-center relative gap-[.35rem]">
 
-                    <a href="https://x.com/" target="_blank"
+                    <a href="https://x.com/cryptotrump_fun" target="_blank"
                         class="social opacity-0 duration-200 hover:scale-[1.1] absolute md:relative md:opacity-100 flex cursor-pointer h-[55px] w-[55px] rounded-full border-[3px] border-black items-center justify-center bg-[#7CFFA1]">
                         <img src="x-icon.svg" alt="twitter" class="relative h-auto w-[50%]">
                     </a>
-                    <a href="https://t.me/" target="_blank"
+                    <a href="https://t.me/cryptotrump_fun" target="_blank"
                         class="social opacity-0 duration-200 hover:scale-[1.1] absolute md:relative md:opacity-100 flex cursor-pointer h-[55px] w-[55px] rounded-full border-[3px] border-black items-center justify-center bg-[#7CE7FF]">
                         <img src="tele-icon.svg" alt="telegram" class="relative h-auto w-[65%]">
                     </a>
@@ -3345,7 +3345,7 @@
                 class="h-[30%] z-[10] w-full flex justify-center xl:justify-start xl:pl-[3%] min-[1500px]:pl-[10%] items-center absolute top-[380px] min-[500px]:top-[450px] md:top-[420px] xl:top-[320px] gap-[.35rem] xl:gap-[3.5rem] max-[500px]:justify-between max-[500px]:px-[2rem]">
 
                 <div class="relative aos-init" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">
-                    <a href="https://x.com/" target="_blank"
+                    <a href="https://x.com/cryptotrump_fun" target="_blank"
                         class="social w-[71px] h-[82px] xl:w-[163px] xl:h-[185px] rounded-[16.71px] xl:rounded-[38.47px] flex items-center flex-col border-[1px] xl:border-[3px] border-black bg-[#E9BC50] py-[.35rem] duration-300 rotate-[6deg] hover:rotate-[0deg]">
                         <div
                             class="icon rounded-[16.71px] xl:rounded-[38.47px] w-[62px] h-[50px] xl:w-[90%] xl:h-[115px] border-[1px]  xl:border-[3px] border-black flex justify-center items-center">
@@ -3356,7 +3356,7 @@
                 </div>
 
                 <div class="relative aos-init" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300">
-                    <a href="https://t.me/" target="_blank"
+                    <a href="https://t.me/cryptotrump_fun" target="_blank"
                         class="social w-[71px] h-[82px] xl:w-[163px] xl:h-[185px] rounded-[16.71px] xl:rounded-[38.47px] flex items-center flex-col border-[1px] xl:border-[3px] border-black bg-[#C4D39F] py-[.35rem] duration-300 rotate-[-4deg] hover:rotate-[0deg]">
                         <div
                             class="icon rounded-[16.71px] xl:rounded-[38.47px] w-[62px] h-[50px] xl:w-[90%] xl:h-[115px] border-[1px] xl:border-[3px] border-black flex justify-center items-center">
